--- a/proyecto-js/css/styles.css
+++ b/proyecto-js/css/styles.css
@@ -1,3 +1,13 @@
 body{
-    
+    /*los dos puntos antes me sirven para poder ingresar a directorio padre para ir a la carptea IMG*/
+    background: url("../img/hojas.jpg");
+    background-attachment: fixed;
+}
+#global{
+    width: 65%;
+    margin: 0px auto;
+    margin-top: 30px; 
+    padding: 20px;
+    background: white;
+    box-shadow: 0px 0px 2px #ccc;
 }
