--- a/proyecto-js/css/styles.css
+++ b/proyecto-js/css/styles.css
@@ -1,3 +1,15 @@
+*{
+    margin: 0px;
+    padding: 0px;
+    list-style: none;
+
+}
+.clearfix{
+    float: none;
+    clear: both;
+}
+
+
 body{
     /*los dos puntos antes me sirven para poder ingresar a directorio padre para ir a la carptea IMG*/
     background: url("../img/hojas.jpg");
@@ -9,5 +21,19 @@ body{
     margin-top: 30px; 
     padding: 20px;
     background: white;
-    box-shadow: 0px 0px 2px #ccc;
+    box-shadow: 0px 0px 2px gray;
+}
+
+#logo{
+    font-family: Verdana, Arial;
+    font-size: 30px;
+    letter-spacing: 4px;
+    line-height: 75px;
+    background: #235E3D;
+    color: white;
+    text-align: center;
+    width: 385px;
+    height: 80px;
+    margin-bottom: 20px;
+    float: left;
 }
