--- a/proyecto-js/css/styles.css
+++ b/proyecto-js/css/styles.css
@@ -72,3 +72,27 @@ body{
     padding-left: 30px;
     padding-right: 30px;
 }
+
+#posts{
+    width: 60%;
+    float: left;
+    font-family: Helvetica, Arial;
+
+}
+
+.post h2{
+    font-size: 30px;
+    color: #333;
+}
+
+.post .date{
+    display: block;
+    color: gray;
+    margin-top: 5px;
+}
+
+.post p{
+    margin-top: 10px;
+    margin-bottom: 20px;
+    line-height: 22px;
+}
