--- a/proyecto-js/css/styles.css
+++ b/proyecto-js/css/styles.css
@@ -80,6 +80,10 @@ body{
 
 }
 
+.post{
+    padding: 7px;
+}
+
 .post h2{
     font-size: 30px;
     color: #333;
@@ -95,4 +99,19 @@ body{
     margin-top: 10px;
     margin-bottom: 20px;
     line-height: 22px;
+    text-align: justify;
+}
+
+.button-more{
+    font-size: 14px;
+    text-align: center;
+    display: block;
+    padding: 15px;
+    background: #235E3D;
+    color: white;
+    text-decoration: none;
+    margin-top: 10px;
+    width: 70px;
+    margin-bottom: 20px;
+    
 }
