--- a/proyecto-js/css/styles.css
+++ b/proyecto-js/css/styles.css
@@ -116,6 +116,20 @@ body{
     
 }
 
+#sidebar{
+    font-family: Helvetica, Arial;
+    width: 31%;
+    float: right;
+}
+
+#sidebar h4{
+    margin-top: 50px;
+    margin-bottom: 20px;
+    text-align: center;
+    line-height: 10px;
+    color: #333;
+}
+
 /*
 progres...
 */
