--- a/proyecto-js/css/styles.css
+++ b/proyecto-js/css/styles.css
@@ -19,7 +19,7 @@ body{
     width: 65%;
     margin: 0px auto;
     margin-top: 30px; 
-    padding: 20px;
+    padding: 25px;
     background: white;
     box-shadow: 0px 0px 2px gray;
 }
@@ -128,8 +128,42 @@ body{
     text-align: center;
     line-height: 10px;
     color: #333;
+    background: url("../img/lines.png") repeat-x;
 }
 
+#sidebar h4 span{
+    background: white;
+    padding: 5px;
+}
+
+#sidebar img{
+    width: 100%;
+}
+
+#sidebar p{
+    font-size: 15px;
+    text-align: justify;
+}
+
+form input[type="text"],
+form input[type="email"],
+form input[type="password"]{
+    padding: 5px;
+    border-radius: 2px;
+    border: 1px solid #ccc;
+    width: 90%;
+    margin-bottom: 10px;
+    box-shadow: 0px 0px 3px black;
+    margin-top: 5px;
+}
+
+form input[type="submit"]{
+    background: #eee;
+    padding: 10px;
+    border: 1px solid #ccc;
+    color: #333;
+    cursor: pointer;
+}
 /*
 progres...
 */
