--- a/proyecto-js/css/styles.css
+++ b/proyecto-js/css/styles.css
@@ -29,7 +29,7 @@ body{
     font-size: 28px;
     letter-spacing: 4px;
     line-height: 75px;
-    background: #235E3D;
+    background: #001aff;
     color: white;
     text-align: center;
     width: 385px;
@@ -62,7 +62,7 @@ body{
 }
 
 #menu ul li:hover{
-    background: #235E3D;
+    background: #00aaff;
 }
 
 #menu a{
@@ -107,8 +107,8 @@ body{
     text-align: center;
     display: block;
     padding: 15px;
-    background: #235E3D;
-    color: white;
+    background: #00c3f9;
+    color: black;
     text-decoration: none;
     margin-top: 10px;
     width: 70px;
@@ -158,11 +158,25 @@ form input[type="password"]{
 }
 
 form input[type="submit"]{
-    background: #eee;
+    background: #00c3f9;
     padding: 10px;
     border: 1px solid #ccc;
-    color: #333;
+    color: black;
     cursor: pointer;
+}
+
+footer {
+    font-family: Helvetica, Arial;
+    color:  white;
+    height: 47px;
+    background: rgba(0, 208, 255, 0.7);
+    margin: 0px auto;
+    width: 65%;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-top: 50px;
+    line-height: 47px;
+
 }
 /*
 progres...
