--- a/proyecto-js/css/styles.css
+++ b/proyecto-js/css/styles.css
@@ -179,19 +179,13 @@ footer {
 
 }
 
+.bx wrapper, .bx-viewport {
+    height: 350px !important;
+}
 
-/*
-Progress...
-*/
-/*
-Progress...
-*/
-/*
-Progress...
-*/
-/*
-Progress...
-*/
+
+
+
 /*
 Progress...
 */
