--- a/proyecto-js/css/styles.css
+++ b/proyecto-js/css/styles.css
@@ -179,7 +179,7 @@ footer {
 #selector_theme{
     position: fixed;
     top: 40%;
-    background: rgba(51, 51, 51, 0.5);
+    background: rgba(78, 79, 79, 0.922);
     width: 50px;
     height: 100px;
 }
@@ -195,14 +195,21 @@ footer {
     margin-bottom: 5px;
     cursor: pointer;
 }
-#to-blue{
-    background: #001aff;
+#to-blue img{
+    background: url("../img/5.png");
+    width: 100%;
+    height: 100%;
+    
 }
-#to-red{
-    background: #f10000;
+#to-red img{
+    background: url("../img/6.png");
+    width: 100%;
+    height: 100%;
 }
-#to-purple{
-    background: #ab04abed;
+#to-purple img{
+    background: url("../img/7.png");
+    width: 100%;
+    height: 100%;
 }
 
 /*
