--- a/proyecto-js/css/styles.css
+++ b/proyecto-js/css/styles.css
@@ -222,7 +222,18 @@ footer {
 /*
 Progress.........1
 */
-
+/*
+Progress.........2
+*/
+/*
+Progress.........3
+*/
+/*
+Progress.........4
+*/
+/*
+Progress.........5
+*/
 
 
 
