--- a/proyecto-js/css/styles.css
+++ b/proyecto-js/css/styles.css
@@ -241,8 +241,10 @@ footer {
     font-weight: bold;
     font-family: Helvetica, Arial;
     color: #333;
-    border: 5px solid #333;
-
+    border: 5px dashed #333;
+    width: 30%;
+    padding: 30px;
+    margin: 0px auto; 
 }
 /*
 Progress.........1
