--- a/proyecto-js/css/styles.css
+++ b/proyecto-js/css/styles.css
@@ -253,6 +253,21 @@ footer {
 /*
 Progress.........1
 */
+/*
+Progress.........1
+*/
+
+
+/*
+Progress.........1
+*/
+
+
+/*
+Progress.........1
+*/
+
+
 
 
 
