--- a/proyecto-js/css/styles.css
+++ b/proyecto-js/css/styles.css
@@ -263,6 +263,27 @@ footer {
 /*
 Progress.........1
 */
+/*
+Progress.........1
+*/
+/*
+Progress.........1
+*/
+/*
+Progress.........1
+*/
+/*
+Progress.........1
+*/
+/*
+Progress.........1
+*/
+/*
+Progress.........1
+*/
+/*
+Progress.........1
+*/
 
 
 
