--- a/proyecto-js/css/styles.css
+++ b/proyecto-js/css/styles.css
@@ -274,6 +274,21 @@ footer {
 Progress.........1
 */
 
+/*
+Progress.........1
+*/
+
+/*
+Progress.........1
+*/
+
+/*
+Progress.........1
+*/
+
+/*
+Progress.........1
+*/
 
 
 
