--- a/proyecto-js/css/styles.css
+++ b/proyecto-js/css/styles.css
@@ -261,12 +261,12 @@ footer {
     margin-top: 5px;
 }
 .form-error{
-    float: right;
+    /*float: right;*/
     font-size: 11px;
     background: red;
     color: white;
     padding: 10px;
-    width: 65%;
+    width: 100%;
 }
 
 
