--- a/proyecto-js/css/styles.css
+++ b/proyecto-js/css/styles.css
@@ -103,7 +103,7 @@ h2{
     text-align: center;
     display: block;
     padding: 15px;
-    color: black;
+    color: white;
     text-decoration: none;
     margin-top: 10px;
     width: 70px;
