--- a/aprendiendo-angular/src/app/app.component.html
+++ b/aprendiendo-angular/src/app/app.component.html
@@ -7,6 +7,11 @@
     Vamos a aprender Angular Juntos
   </p>
 
+  <!--Cargando el Componente Videojuego-->
+  <videojuego></videojuego>
+  <videojuego></videojuego>
+  <videojuego></videojuego>
+
 </div>
 
 
