--- a/aprendiendo-angular/src/app/app.component.html
+++ b/aprendiendo-angular/src/app/app.component.html
@@ -9,7 +9,8 @@
 
   <!--Cargando el Componente Videojuego-->
   <videojuego></videojuego>
-  <zapatillas></zapatillas>
+  <cursos></cursos>
+  
 
 
 </div>
