--- a/aprendiendo-angular/src/app/videojuego/videojuego.component.html
+++ b/aprendiendo-angular/src/app/videojuego/videojuego.component.html
@@ -8,3 +8,4 @@ del componente {{titulo}} = "Componente de Videojuegos" -->
     <li>DLS25</li>
     <li>Mainecraft</li>
 </ul>
+<zapatillas></zapatillas>
