--- a/aprendiendo-angular/src/app/videojuego/videojuego.component.html
+++ b/aprendiendo-angular/src/app/videojuego/videojuego.component.html
@@ -2,6 +2,9 @@
 del componente {{titulo}} = "Componente de Videojuegos" -->
 <h2>{{titulo}}</h2>
 <p>{{listado}}</p>
+
+<button (click)="cambiarTitulo()">Cambiar Titulo</button>
+
 <ul>
     <li>GTA 6</li>
     <li>FC25</li>
