--- a/aprendiendo-angular/src/app/app.component.html
+++ b/aprendiendo-angular/src/app/app.component.html
@@ -1,10 +1,16 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div>
+<!--ngStyle: para darle estilo css en typescript-->
+<div [ngStyle]="{
+          'background': config.fondo,
+          'padding': '20px',
+          'border': '5px solid black',
+          'border-color': config.color
+      }">
   <h1>
     Bienvenidos al {{ title }}!
   </h1>
   <p>
-    Vamos a aprender Angular Juntos
+    {{descripcion}}
   </p>
 
   <button (click)="ocultarVideojuegos(false)" *ngIf="mostrar_videojuegos">Ocultar</button>
