--- a/aprendiendo-angular/src/app/app.component.html
+++ b/aprendiendo-angular/src/app/app.component.html
@@ -13,14 +13,16 @@
     {{descripcion}}
   </p>
 
+  <!--
   <button (click)="ocultarVideojuegos(false)" *ngIf="mostrar_videojuegos">Ocultar</button>
   <button (click)="ocultarVideojuegos(true)" *ngIf="!mostrar_videojuegos">Mostrar</button>
 
-  <!--Cargando el Componente Videojuego-->
+  <!-Cargando el Componente Videojuego->
   <videojuego *ngIf="mostrar_videojuegos"></videojuego>
   <cursos></cursos>
   <cursos></cursos>
-  
+   -->
+  <zapatillas></zapatillas>
 
 
 </div>
