--- a/aprendiendo-angular/src/app/zapatillas/zapatillas.component.html
+++ b/aprendiendo-angular/src/app/zapatillas/zapatillas.component.html
@@ -2,7 +2,13 @@
 <ul>
     <!--con la directica ngFor permite recorrer el array y mostrar valore-->
     <li *ngFor="let deportiva of zapatillas">
-        {{deportiva.nombre}} - <strong>{{deportiva.precio}}</strong>
+        {{deportiva.nombre}} - <strong>Q {{deportiva.precio}} </strong>
+       
+        <span *ngIf="deportiva.precio < 80"
+        [style.background]="deportiva.precio < 80 ? 'green' : 'transparent'"
+        [style.color]="deportiva.precio < 80 ? 'white' : 'black'"
+        >!EN OFERTA! </span>
+    
     </li>
 
 </ul>
