--- a/aprendiendo-angular/src/app/zapatillas/zapatillas.component.html
+++ b/aprendiendo-angular/src/app/zapatillas/zapatillas.component.html
@@ -1,8 +1,8 @@
 <h2>{{titulo}}</h2>
 
 <p>Añadir Marca</p>
-<p>
-<input type="text" [(ngModel)]="mi_marca" />
+<p>                             <!--blur)="onBlur()"-->
+<input type="text" [(ngModel)]="mi_marca" (keyup.enter)="mostrarPalabra()"/>
 <button (click)="getMarca()">Mostrar Marca </button>
 <button (click)="addMarca()">Añadir Marca </button>
 </p>
