--- a/aprendiendo-angular/src/app/zapatillas/zapatillas.component.html
+++ b/aprendiendo-angular/src/app/zapatillas/zapatillas.component.html
@@ -24,7 +24,14 @@
         'text-decoration':!deportiva.stock ? 'line-through' : 'none'
          }">
             {{deportiva.nombre}} - 
-            <strong [class.altoPrecio]="deportiva.precio >= 80">
+            <strong 
+            [class.altoPrecio]="deportiva.precio >= 80"
+            [ngClass]="{
+                'fondoRojo': deportiva.precio > 100, 
+                'subrayado': deportiva.marca == 'Nike'
+            }"   
+            
+                >
         Q {{deportiva.precio}} 
             </strong>
         </span>
