--- a/aprendiendo-angular/src/app/app.component.html
+++ b/aprendiendo-angular/src/app/app.component.html
@@ -22,7 +22,9 @@
   <cursos></cursos>
   <cursos></cursos>
    -->
-  <zapatillas></zapatillas>
+  <!--<zapatillas></zapatillas>-->
+
+  <router-outlet></router-outlet>
 
 
 </div>
