--- a/aprendiendo-angular/src/app/app.component.html
+++ b/aprendiendo-angular/src/app/app.component.html
@@ -13,6 +13,16 @@
     {{descripcion}}
   </p>
 
+  <nav>
+    <a [routerLink]="['/']">Home</a>
+    &nbsp;
+    <a [routerLink]="['/zapatillas']">Zapatillas</a>
+    &nbsp;
+    <a [routerLink]="['/cursos']">Cursos</a>
+    &nbsp;
+    <a [routerLink]="['/videojuego']">Videojuego</a>
+  </nav>
+
   <!--
   <button (click)="ocultarVideojuegos(false)" *ngIf="mostrar_videojuegos">Ocultar</button>
   <button (click)="ocultarVideojuegos(true)" *ngIf="!mostrar_videojuegos">Mostrar</button>
