--- a/aprendiendo-angular/src/app/home/home.component.html
+++ b/aprendiendo-angular/src/app/home/home.component.html
@@ -1,3 +1,11 @@
-<p>
-  home works!
-</p>
+<h2>Pagina Principal</h2>
+
+<div *ngIf="identificado; else noIdentificado">
+   <h3>Estas Identificado en la Aplicacion</h3>
+   <button (click)="unsetIdentificado()">Borrar Identificacion</button>
+</div>
+
+<ng-template #noIdentificado>
+    <p>No estas identificado, pulsa este boton para identificarte</p>
+    <button (click)="setIdentificado()">Identificarse</button>
+</ng-template>
