--- a/aprendiendo-angular/src/app/home/home.component.html
+++ b/aprendiendo-angular/src/app/home/home.component.html
@@ -1,9 +1,13 @@
 <h2>Pagina Principal</h2>
 
-<div *ngIf="identificado; else noIdentificado">
-   <h3>Estas Identificado en la Aplicacion</h3>
-   <button (click)="unsetIdentificado()">Borrar Identificacion</button>
+<div *ngIf="identificado; then siidentificado else noIdentificado">
+   
 </div>
+
+<ng-template #siidentificado>
+    <h3>Estas Identificado en la Aplicacion</h3>
+    <button (click)="unsetIdentificado()">Borrar Identificacion</button>
+</ng-template>
 
 <ng-template #noIdentificado>
     <p>No estas identificado, pulsa este boton para identificarte</p>
