--- a/aprendiendo-angular/src/app/externo/externo.component.html
+++ b/aprendiendo-angular/src/app/externo/externo.component.html
@@ -1,5 +1,6 @@
 
-{{fecha | date:'dd/MM/yy' }}
+{{fecha | date:'dd/MM/yy' }} <br/>
+{{fecha | date:'fullDate' }}
 <hr>
 <input type="text" [(ngModel)]="userId" (keyup.enter)="cargaUsuario()"/>
 
