--- a/aprendiendo-angular/src/app/externo/externo.component.html
+++ b/aprendiendo-angular/src/app/externo/externo.component.html
@@ -2,6 +2,8 @@
 {{fecha | date:'dd/MM/yy' }} <br/>
 {{fecha | date:'fullDate' | uppercase}} <br/>
 {{'HOLA MUNDO USANDO PIPES' | lowercase }}
+{{ 88 | calculadora: 2}}
+
 <hr>
 <input type="text" [(ngModel)]="userId" (keyup.enter)="cargaUsuario()"/>
 
