--- a/aprendiendo-angular/src/app/externo/externo.component.html
+++ b/aprendiendo-angular/src/app/externo/externo.component.html
@@ -1,7 +1,7 @@
 
 {{fecha | date:'dd/MM/yy' }} <br/>
 {{fecha | date:'fullDate' | uppercase}} <br/>
-{{'HOLA MUNDO USANDO PIPES' | lowercase }}
+{{'HOLA MUNDO USANDO PIPES' | lowercase }} <br/>
 {{ 88 | calculadora: 2}}
 
 <hr>
