--- a/aprendiendo-angular/src/app/externo/externo.component.html
+++ b/aprendiendo-angular/src/app/externo/externo.component.html
@@ -26,6 +26,11 @@
 
 </form>
 
+<div *ngIf="usuario_guardado">
+  <h2>El Usuario se ha Guardado Correctamente</h2>
+  <h3>{{usuario_guardado.name}}</h3>
+  <h4>{{usuario_guardado.job}}</h4>
+</div>
 
 <hr>
 
