--- a/proyecto-angular/src/assets/css/style.css
+++ b/proyecto-angular/src/assets/css/style.css
@@ -43,9 +43,10 @@ header{
 
 header ul{
     display: block;
-    width: 750px;
+    width: 39%;
     height: inherit;
     margin: 0px auto;
+    margin-top: -3px;
     
 }
 
@@ -53,7 +54,7 @@ header ul li{
     display: inline-block;
     margin: 0px auto;
     text-align: center;
-    line-height: 90px;
+    line-height: 88px;
 }
 
 header a{
@@ -70,7 +71,15 @@ header a:hover{
     background: rgba(0,0,0,0.8);
 }
 
-header #logo a:hover{
+
+/*Logotipo*/
+
+#logo {
+    font-family: "finger";
+    font-size: 30px;
+}
+
+#logo a:hover{
     background: transparent;
 
 }
