--- a/proyecto-angular/src/app/app.component.html
+++ b/proyecto-angular/src/app/app.component.html
@@ -3,7 +3,7 @@
 <ul>
   <li><a [routerLink]="['/Sobre-Mi']">Sobre Mi</a></li>
   <li><a [routerLink]="['/Proyectos']">Proyectos</a></li>
-  <li id="logo"><a href="#">VR</a></li>
+  <li id="logo"><a href="#">Adel</a></li>
   <li><a [routerLink]="['/Crear-Proyectos']">Crear Proyectos</a></li>
   <li><a [routerLink]="['/Contacto']">Contacto</a></li>
 </ul>
