--- a/proyecto-angular/src/assets/css/style.css
+++ b/proyecto-angular/src/assets/css/style.css
@@ -43,7 +43,7 @@ header{
 
 header ul{
     display: block;
-    width: 39%;
+    width: 40%;
     height: inherit;
     margin: 0px auto;
     margin-top: -3px;
@@ -90,4 +90,13 @@ header a:hover{
 
 }
 
-
+/*Contenedor Principal*/
+#content{
+    min-height: 800px;
+    width: 75%;
+    margin: 0px auto;
+    box-shadow: 0px 0px 40px black;
+    border-left:  1px solid #b7b7b7;
+    background: rgb(255,255, 255, 0.7);
+    padding-top: 120px;
+}
