--- a/proyecto-angular/src/assets/css/style.css
+++ b/proyecto-angular/src/assets/css/style.css
@@ -100,3 +100,11 @@ header a:hover{
     background: rgb(255,255, 255, 0.7);
     padding-top: 120px;
 }
+
+/*Pie de Pagina*/
+footer{
+    width: 75%;
+    margin: 0px auto;
+    padding-top: 15px;
+    color: rgba(0, 0, 0, 0.5);
+}
