--- a/proyecto-angular/src/app/app.component.html
+++ b/proyecto-angular/src/app/app.component.html
@@ -1,11 +1,11 @@
 
 <header>
 <ul>
-  <li><a [routerLink]="['/Sobre-Mi']">Sobre Mi</a></li>
-  <li><a [routerLink]="['/Proyectos']">Proyectos</a></li>
-  <li id="logo"><a href="#">Adel</a></li>
-  <li><a [routerLink]="['/Crear-Proyectos']">Crear Proyectos</a></li>
-  <li><a [routerLink]="['/Contacto']">Contacto</a></li>
+  <li><a [routerLink]="['/Sobre-Mi']" [routerLinkActive]="['actived']">Sobre Mi</a></li>
+  <li><a [routerLink]="['/Proyectos']" [routerLinkActive]="['actived']">Proyectos</a></li>
+  <li id="logo"><a href="#" >Adel</a></li>
+  <li><a [routerLink]="['/Crear-Proyectos']" [routerLinkActive]="['actived']">Crear Proyectos</a></li>
+  <li><a [routerLink]="['/Contacto']" [routerLinkActive]="['actived']">Contacto</a></li>
 </ul>
 </header>
 
