--- a/proyecto-angular/src/assets/css/style.css
+++ b/proyecto-angular/src/assets/css/style.css
@@ -67,7 +67,8 @@ header a{
     transition: all 300ms;
 }
 
-header a:hover{
+header a:hover,
+.actived{
     background: rgba(0,0,0,0.8);
 }
 
@@ -92,7 +93,7 @@ header a:hover{
 
 /*Contenedor Principal*/
 #content{
-    min-height: 800px;
+    min-height: 780px;
     width: 75%;
     margin: 0px auto;
     box-shadow: 0px 0px 40px black;
