--- a/proyecto-angular/src/app/components/about/about.component.html
+++ b/proyecto-angular/src/app/components/about/about.component.html
@@ -1,3 +1,22 @@
-<p>
-  about works!
-</p>
+<div id="title">
+  <h1>{{title}}</h1>
+  <h2>{{subtitle}}</h2>
+  <p>{{web}}</p>
+</div>>
+
+<article class="about">
+    <h2>Sobre Mi</h2>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+      Praesent consectetur, odio non ultricies tristique, dolor 
+      ipsum sagittis lorem, at aliquet velit nisi in nunc. 
+      Suspendisse potenti. Nullam ut bibendum velit. Praesent 
+      massa ex, feugiat vitae sodales a, faucibus vel purus. 
+      Integer dapibus suscipit faucibus. Nullam fringilla 
+      dictum arcu, at aliquet erat porttitor in. Donec sed 
+      faucibus justo. Fusce pellentesque posuere lacus, vel 
+      facilisis orci tincidunt eget. Maecenas venenatis sem vel 
+      velit imperdiet auctor.
+    </p>
+
+</article>
