--- a/proyecto-angular/src/app/components/create/create.component.html
+++ b/proyecto-angular/src/app/components/create/create.component.html
@@ -1,1 +1,10 @@
+<div class="container">
+  <h2>{{title}}</h2>
+  <form #projectForm="ngForm" (ngSubmit)="onSubmit(projectForm)">
+
+  </form>
+
+</div>
+/*/*/
+
 
