--- a/proyecto-angular/src/app/app.component.html
+++ b/proyecto-angular/src/app/app.component.html
@@ -4,7 +4,7 @@
   <li><a [routerLink]="['/Sobre-Mi']" [routerLinkActive]="['actived']">Sobre Mi</a></li>
   <li><a [routerLink]="['/Proyectos']" [routerLinkActive]="['actived']">Proyectos</a></li>
   <li id="logo"><a href="#" >Adel</a></li>
-  <li><a [routerLink]="['/Crear-Proyectos']" [routerLinkActive]="['actived']">Crear Proyectos</a></li>
+  <li><a [routerLink]="['/Crear-Proyecto']" [routerLinkActive]="['actived']">Crear Proyectos</a></li>
   <li><a [routerLink]="['/Contacto']" [routerLinkActive]="['actived']">Contacto</a></li>
 </ul>
 </header>
