--- a/proyecto-angular/src/app/components/create/create.component.html
+++ b/proyecto-angular/src/app/components/create/create.component.html
@@ -2,6 +2,38 @@
 <div class="container">
   <h2>{{title}}</h2>
   <form #projectForm="ngForm" (ngSubmit)="onSubmit(projectForm)">
+    <p>
+      <label for="name">Nombre</label>
+      <input type="text" name="name" #name="ngModel" [(ngModel)]="project.name" /> 
+    </p>
+
+    <p>
+      <label for="description">Descripcion</label>
+      <textarea name="description" #description="ngModel" [(ngModel)]="project.description"></textarea> 
+    </p>
+
+    <p>
+      <label for="category">Categoria</label>
+      <input type="text" name="category" #category="ngModel" [(ngModel)]="project.category" /> 
+    </p>
+
+    <p>
+      <label for="year">Año de Lanzamiento</label>
+      <input type="number" name="year" #year="ngModel" [(ngModel)]="project.year" /> 
+    </p>
+
+    <p>
+      <label for="langs">Lenguajes Utilizados</label>
+      <input type="text" name="langs" #langs="ngModel" [(ngModel)]="project.langs" /> 
+    </p>
+
+    <p>
+        <label for="image">Imagen del Proyecto</label>
+        <input type="file" name="image" placeholder="Subir imagen" />
+
+    </p>
+
+    <input type="submit" value="Enviar" />
 
   </form>
 
