--- a/proyecto-angular/src/assets/css/style.css
+++ b/proyecto-angular/src/assets/css/style.css
@@ -167,7 +167,7 @@ article.about{
 }
 
 form{
-    width: 50%;
+    width: 80%;
 }
 
 form label{
@@ -181,7 +181,7 @@ form input[type="text"],
 form input[type="number"],
 form input[type="email"],
 form textarea{
-    width: 80%;
+    width: 40%;
     padding: 5px;
 }
 
@@ -201,4 +201,18 @@ form button:hover,
 form input[type="submit"]:hover{
     background: rgb(53, 103, 164, 0.8);
     border: 1px solid rgba(13, 67, 133, 1);
+}
+
+form input[disabled]{
+    opacity: 0.4;
+    cursor: not-allowed;
+}
+
+.form_error{
+    font-size: 13px;
+    padding: 3px;
+    background: red;
+    color: white;
+    margin-left: 5px;
+
 }
