--- a/proyecto-angular/src/app/components/create/create.component.html
+++ b/proyecto-angular/src/app/components/create/create.component.html
@@ -4,36 +4,53 @@
   <form #projectForm="ngForm" (ngSubmit)="onSubmit(projectForm)">
     <p>
       <label for="name">Nombre</label>
-      <input type="text" name="name" #name="ngModel" [(ngModel)]="project.name" /> 
+      <input type="text" name="name" #name="ngModel" [(ngModel)]="project.name" 
+      required /> 
+      <span class="form_error" *ngIf="name.touched && !name.valid">
+        El nombre es Obligatorio
+      </span>
     </p>
 
     <p>
       <label for="description">Descripcion</label>
-      <textarea name="description" #description="ngModel" [(ngModel)]="project.description"></textarea> 
+      <textarea name="description" #description="ngModel" [(ngModel)]="project.description"
+      required></textarea> 
+      <span class="form_error" *ngIf="description.touched && !description.valid">
+        La descripcion es Obligatorio
+      </span>
     </p>
 
     <p>
       <label for="category">Categoria</label>
-      <input type="text" name="category" #category="ngModel" [(ngModel)]="project.category" /> 
+      <input type="text" name="category" #category="ngModel" [(ngModel)]="project.category"
+      required />
+      <span class="form_error" *ngIf="category.touched && !category.valid">
+        La Categoria es Obligatorio
+      </span>
     </p>
 
     <p>
       <label for="year">Año de Lanzamiento</label>
-      <input type="number" name="year" #year="ngModel" [(ngModel)]="project.year" /> 
+      <input type="number" name="year" #year="ngModel" [(ngModel)]="project.year"
+       /> 
     </p>
 
     <p>
       <label for="langs">Lenguajes Utilizados</label>
-      <input type="text" name="langs" #langs="ngModel" [(ngModel)]="project.langs" /> 
+      <input type="text" name="langs" #langs="ngModel" [(ngModel)]="project.langs"
+      required />
+      <span class="form_error" *ngIf="langs.touched && !langs.valid">
+        Los Lenguajes son Obligatorios
+      </span> 
     </p>
 
     <p>
         <label for="image">Imagen del Proyecto</label>
-        <input type="file" name="image" placeholder="Subir imagen" />
-
+        <input type="file" name="image" placeholder="Subir imagen"
+         />
     </p>
 
-    <input type="submit" value="Enviar" />
+    <input type="submit" value="Enviar" [disabled]="!projectForm.form.valid" />
 
   </form>
 
