--- a/proyecto-angular/src/app/components/create/create.component.html
+++ b/proyecto-angular/src/app/components/create/create.component.html
@@ -55,8 +55,8 @@
 
     <p>
         <label for="image">Imagen del Proyecto</label>
-        <input type="file" name="image" placeholder="Subir imagen"
-         />
+        <input type="file" name="image" placeholder="Subir imagen" (change)="
+        fileChangeEvent($event)" />
     </p>
 
     <input type="submit" value="Enviar" [disabled]="!projectForm.form.valid" />
