--- a/proyecto-angular/src/assets/css/style.css
+++ b/proyecto-angular/src/assets/css/style.css
@@ -93,7 +93,8 @@ header a:hover,
 
 /*Contenedor Principal*/
 #content{
-    min-height: 780px;
+    min-height: 790px;
+    height: auto;
     width: 75%;
     margin: 0px auto;
     box-shadow: 0px 0px 40px black;
@@ -235,4 +236,26 @@ form input[disabled]{
 .failed{
     background: red;
     color: white;
+}
+
+/*Pagina de Proyectos*/
+.project{
+    list-style: none;
+    display: block;
+    float: left;
+    width: 29%;
+    text-align: center;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-bottom: 30px;
+}
+
+.project .image{
+    width: 100%;
+    height: 230px;
+    overflow: hidden;
+}
+
+.project img{
+    width: 100%;
 }
