--- a/proyecto-angular/src/assets/css/style.css
+++ b/proyecto-angular/src/assets/css/style.css
@@ -159,6 +159,22 @@ article.about{
     padding-top: 10px;
 }
 
+.container .image{
+    float: left;
+    width: 47%;
+}
+
+.container .image img{
+    width: 100%;
+}
+
+
+.container .data{
+    float: left;
+    width: 48%;
+    margin-left: 30px;
+}
+
 .container h2{
     display: block;
     border-bottom: 1px solid #ccc;
@@ -187,7 +203,9 @@ form textarea{
 }
 
 form button,
-form input[type="submit"]{
+form input[type="submit"],
+.button-edit,
+.button-delete{
     display: block;
     font-size: 17px;
     padding: 10px;
@@ -197,6 +215,26 @@ form input[type="submit"]{
     border: 1px solid rgba(13, 67, 133, 1);
     cursor: pointer;
 }
+
+.button-edit,
+.button-delete{
+    width: 15%;
+    float: left;
+    margin-right: 10px;
+    text-decoration: none;
+}
+
+.button-edit{
+    background: cyan;
+    color: black;
+    border: 1px solid black;
+}
+
+.button-delete{
+    background: red;
+    border: 1px solid black;
+}
+
 
 form button:hover,
 form input[type="submit"]:hover{
