--- a/proyecto-angular/src/app/components/detail/detail.component.html
+++ b/proyecto-angular/src/app/components/detail/detail.component.html
@@ -9,10 +9,17 @@
       <h3>{{project.description}}</h3>
       <p>{{project.category}}</p>
       <p>{{project.langs}}</p>
-  <p>
-    <a [routerLink]="['/editar-proyecto', project._id]" class="button-edit">Editar</a>
-    <a (click)="deleteProject(project._id)" class="button-delete">Borrar</a>
+      
+  <p *ngIf="confirm == false">
+      <a [routerLink]="['/editar-proyecto', project._id]" class="button-edit">Editar</a>
+      <a (click)="setConfirm(true)" class="button-delete">Borrar</a>
   </p>
+
+  <p *ngIf="confirm == true">
+    <span class="confirm">¿Estas Seguro de Eliminar Este Proyecto? </span>
+    <a (click)="setConfirm(false)" class="button-edit">Cancelar</a>
+    <a (click)="deleteProject(project._id)" class="button-delete">Eliminar Definitivamente</a>
+</p>
 
    </div>
 </div>
