--- a/proyecto-angular/src/assets/css/style.css
+++ b/proyecto-angular/src/assets/css/style.css
@@ -218,7 +218,8 @@ form input[type="submit"],
 
 .button-edit,
 .button-delete{
-    width: 15%;
+    width: 30%;
+    text-align: center;
     float: left;
     margin-right: 10px;
     text-decoration: none;
@@ -226,12 +227,14 @@ form input[type="submit"],
 
 .button-edit{
     background: cyan;
+    font-weight: bold;
     color: black;
     border: 1px solid black;
 }
 
 .button-delete{
     background: red;
+    font-weight: bold;
     border: 1px solid black;
 }
 
@@ -301,4 +304,10 @@ form input[disabled]{
 .project a{
     text-decoration: none;
     color: black;
+}
+
+.confirm{
+    display: block;
+    font-weight: bold;
+    margin-top: 20px;
 }
