--- a/proyecto-angular/src/app/components/contact/contact.component.html
+++ b/proyecto-angular/src/app/components/contact/contact.component.html
@@ -1,3 +1,10 @@
-<p>
-  contact works!
-</p>
+<div class="container">
+
+  <div class="bxslider">
+    <div><img src="/assets/img/" title="Coffee 1" /></div>
+    <div><img src="/assets/" title="Coffee 2" /></div>
+    <div><img src="/assets/" title="Coffee 3" /></div>
+  </div>
+  
+
+</div>
