--- a/proyecto-angular/src/app/components/contact/contact.component.html
+++ b/proyecto-angular/src/app/components/contact/contact.component.html
@@ -1,9 +1,9 @@
 <div class="container">
 
-  <div class="bxslider">
-    <div><img src="/assets/img/" title="Coffee 1" /></div>
-    <div><img src="/assets/" title="Coffee 2" /></div>
-    <div><img src="/assets/" title="Coffee 3" /></div>
+  <div class="galeria">
+    <div><img src="assets/img/cof1.jpg" title="Coffee 1" /></div>
+    <div><img src="assets/img/cof2.jpg" title="Coffee 2" /></div>
+    <div><img src="assets/img/cof3.jpg" title="Coffee 3" /></div>
   </div>
   
 
