--- a/proyecto-angular/src/app/components/contact/contact.component.html
+++ b/proyecto-angular/src/app/components/contact/contact.component.html
@@ -1,10 +1,6 @@
 <div class="container">
+<h1>Contacto</h1>
 
-  <div class="galeria">
-    <div><img src="assets/img/circuito.jpg" title="Coffee 1" /></div>
-    <div><img src="assets/img/IA.jpg" title="Coffee 2" /></div>
-    <div><img src="assets/img/setup.jpg" title="Coffee 3" /></div>
-  </div>
-  
+<slider></slider>
 
 </div>
