--- a/proyecto-angular/src/app/components/contact/contact.component.html
+++ b/proyecto-angular/src/app/components/contact/contact.component.html
@@ -1,6 +1,15 @@
 <div class="container">
 <h1>Contacto</h1>
 
-<slider></slider>
+Tamaño del Slider:
+<input type="number" [(ngModel)]="widthSlider" />
+<button (click)="cargarSlider()">Cargar Slider</button>
+<button (click)="resetearSlider()">Resetear Slider</button>
+
+  <div *ngIf="anchuraToSlider">
+      <slider [anchura]="anchuraToSlider"
+              [etiquetas]="captions"
+      ></slider>
+  </div>
 
 </div>
