--- a/proyecto-angular/src/app/components/slider/slider.component.html
+++ b/proyecto-angular/src/app/components/slider/slider.component.html
@@ -1,4 +1,6 @@
 
+Slider: <strong>{{anchura}}</strong>, Captions: <strong>{{captions}}</strong>
+  
   <div class="galeria">
     <div><img src="assets/img/circuito.jpg" title="Coffee 1" /></div>
     <div><img src="assets/img/IA.jpg" title="Coffee 2" /></div>
