--- a/proyecto-angular/src/app/components/slider/slider.component.html
+++ b/proyecto-angular/src/app/components/slider/slider.component.html
@@ -6,5 +6,7 @@ Slider: <strong>{{anchura}}</strong>, Captions: <strong>{{captions}}</strong>
     <div><img src="assets/img/IA.jpg" title="Coffee 2" /></div>
     <div><img src="assets/img/setup.jpg" title="Coffee 3" /></div>
   </div>
+
+  <button (click)="lanzar($event)">Conseguir Autor</button>
   
 
