--- a/proyecto-angular/src/app/components/contact/contact.component.html
+++ b/proyecto-angular/src/app/components/contact/contact.component.html
@@ -1,6 +1,11 @@
 <div class="container">
 <h1>Contacto</h1>
 
+<p>
+  Esta es la Pagina de Contacto Puedes enviardos Cualquier duda
+</p>
+
+<!--
 Tamaño del Slider:
 <input type="number" [(ngModel)]="widthSlider" />
 <button (click)="cargarSlider()">Cargar Slider</button>
@@ -14,5 +19,6 @@ Tamaño del Slider:
   </div>
 
   {{autor.nombre+ " "+autor.web}}
+-->
 
 </div>
