--- a/proyecto-angular/src/app/components/contact/contact.component.html
+++ b/proyecto-angular/src/app/components/contact/contact.component.html
@@ -1,9 +1,11 @@
 <div class="container">
 <h1>Contacto</h1>
 
-<p>
-  Esta es la Pagina de Contacto Puedes enviardos Cualquier duda
-</p>
+<div id="texto" #textos>
+    <p>
+      Esta es la Pagina de Contacto, Puedes Enviardos Cualquier Duda.
+    </p>
+</div>
 
 <!--
 Tamaño del Slider:
