--- a/proyecto-angular/src/app/components/contact/contact.component.html
+++ b/proyecto-angular/src/app/components/contact/contact.component.html
@@ -2,7 +2,7 @@
 <h1>Contacto</h1>
 
 <div id="texto" #textos>
-    <p>
+    <p appResaltado>
       Esta es la Pagina de Contacto, Puedes Enviardos Cualquier Duda.
     </p>
 </div>
