--- a/instalacion-angular6-test/src/app/app.component.html
+++ b/instalacion-angular6-test/src/app/app.component.html
@@ -23,6 +23,23 @@
 <!--
 Exelente ...1
 -->
+
 <!--
 Exelente ...2
+-->
+
+<!--
+Exelente ...3
+-->
+
+<!--
+Exelente ...4
+-->
+
+<!--
+Exelente ...5
+-->
+
+<!--
+Exelente ...6
 -->
